Minor change to tasks

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -323,11 +323,11 @@ board.on("ready", function() {
 					<p style="font-size: 50%">Run code and verify</p>
 				</section>
 				<section>
-					<p>Tasks:</p>
+					<h2>Tasks:</h2>
 					<ol>
 						<li>Change Arduino logic to include state, know if led is on/off and change accordingly</li>
-						<li>Add files to index in git</li>
 						<li>Create a .gitignore to exclude the node_modules/ folder</li>
+						<li>Add files to index in git</li>
 						<li>Do a git commit (and perhaps tell git about yourself)</li>
 					</ol>	
 					
@@ -367,7 +367,14 @@ board.on("ready", function() {
 				<section>
 					<p>Code</p>
 				</section>
+
+				<section>
+					<p>Time to put stuff into github?</p>
+				</section>
 			</section>
+
+
+
 			<!-- Start of Adding a camera -->
 			<section>
 				<section>
