Altering resistor strength

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -404,7 +404,7 @@ board.on("ready", function() {
 					<p><a href="http://johnny-five.io/examples/temperature-ds18b20/" target="_blank">Wiring</a></p>
 					<img width="50%" length="50%" src="https://github.com/rwaldron/johnny-five/raw/master/docs/breadboard/temperature-ds18b20.png">
 					<p style="font-size: 70%">A few notes on wiring our sensor;</br> <font color="red">-</font> is ground,
-					 <font color="red">S</font> is signal - digital pin,</br> the middle pin is 5v. Use a 10k resistor.</p>
+					 <font color="red">S</font> is signal - digital pin,</br> the middle pin is 5v. Use a 4.7K resistor (approx).</p>
 				</section>
 				<section>
 					<p style="font-size: 80%">Extend index.js with this code i the board.on function</p>
